--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://techrender.ai/",
   "name": "tr-website",
   "private": true,
   "version": "0.0.0",
@@ -12,13 +13,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "install": "^0.13.0",
+    "nodemailer": "^6.9.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.22.0",
     "react-slick": "^0.30.1",
+    "react-toastify": "^10.0.4",
     "react-type": "^0.1.0",
     "react-typed": "^2.0.12",
     "slick-carousel": "^1.8.1"
