--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.6.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "axios": "^1.6.7",
     "emailjs-com": "^3.2.0",
     "install": "^0.13.0",
     "nodemailer": "^6.9.9",
+    "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -25,6 +28,7 @@
     "react-toastify": "^10.0.4",
     "react-type": "^0.1.0",
     "react-typed": "^2.0.12",
+    "readline": "^1.3.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
