added fadeIn effect to all pages

--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
     "@glidejs/glide": "^3.6.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "install": "^0.13.0",
     "nodemailer": "^6.9.9",
     "openai": "^4.28.0",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.8",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.4",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.22.0",
     "react-slick": "^0.30.1",
     "react-toastify": "^10.0.4",
