--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
+    "googleapis": "^133.0.0",
     "install": "^0.13.0",
-    "nodemailer": "^6.9.9",
+    "nodemailer": "^6.9.10",
     "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
@@ -27,8 +28,8 @@
     "react-icons": "^5.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-reveal": "^1.2.2",
-    "react-router-dom": "^6.22.0",
-    "react-slick": "^0.30.1",
+    "react-router-dom": "^6.22.1",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.4",
     "react-type": "^0.1.0",
     "react-typed": "^2.0.12",
@@ -36,16 +37,16 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.58",
+    "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.55.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.8"
+    "vite": "^5.1.4"
   }
 }
